ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/CnP_PaaS__Pledge__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Pledge</label>
    <nameField>
        <label>C&amp;P Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Pledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>