ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Campaign for VT</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>C&amp;P Pledge</relationshipLabel>
    <relationshipName>C_P_Pledge</relationshipName>
    <type>Lookup</type>
</CustomField>