ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Pledge</relationshipLabel>
    <relationshipName>C_P_Pledge</relationshipName>
    <type>Lookup</type>
</CustomField>