ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Excess_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess Amount</label>
    <type>Checkbox</type>
</CustomField>