ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Fulfilled_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Fulfilled_Date__c</fullName>
    <label>Fulfilled Date</label>
    <type>DateTime</type>
</CustomField>