ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Last_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Last_Payment_Received__c</fullName>
    <label>Last Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>