ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Last_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Last_Payment_Received_Date__c</fullName>
    <label>Last Payment Received Date</label>
    <type>Date</type>
</CustomField>