ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Number_of_Payments__c</fullName>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>