ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Pledge_Stage__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Pledge_Stage__c</fullName>
    <label>Pledge Stage</label>
    <length>15</length>
    <type>Text</type>
</CustomField>