ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__SKU_VT__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SKU_VT__c</fullName>
    <label>Default SKU for VT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>