ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>