ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Total_Paid__c</fullName>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>