ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Pledge__c/fields/CnP_PaaS__Tribute__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Tribute__c</fullName>
    <label>Tribute / Memory of / In Honor of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>